# irc-asm-diamond

./: Makefile  diamond.asm  main.asm  meson.build  mmap.asm  prologue.asm  syscalls.asm  test.c
